--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*,
+/* *,
 *::before,
 *::after {
   box-sizing: border-box;
@@ -41,4 +41,4 @@ h1 {
     height: 250px;
     border-radius: 4px;
   }
-}
+} */
