--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* *,
+*,
 *::before,
 *::after {
   box-sizing: border-box;
@@ -12,7 +12,7 @@
 
 body {
   background-color: #e0dedb;
-  padding: 1rem;
+  padding: 2rem;
 }
 
 h1 {
@@ -20,9 +20,8 @@ h1 {
   margin: 2rem 0;
 }
 
-#container {
+#book-shelf {
   width: 100%;
-  padding: 1rem;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   align-items: center;
@@ -41,4 +40,4 @@ h1 {
     height: 250px;
     border-radius: 4px;
   }
-} */
+}
