--- a/style.css
+++ b/style.css
@@ -41,3 +41,15 @@ h1 {
     border-radius: 4px;
   }
 }
+
+#add-book-dialog {
+  padding: 12px;
+  border: none;
+  border-radius: 12px;
+  /* width: clamp(300px, 40vw, 600px); */
+
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
