Add a button for removing books to each book card

--- a/style.css
+++ b/style.css
@@ -53,3 +53,10 @@ h1 {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+
+
+.btn.remove-book {
+  background-color: #c53a3d;
+  color: #ffffff;
+}
